<resources>
    <string name="app_name">TaskFlow</string>

    <string name="hint_email">Digite seu e-mail</string>
    <string name="hint_password">Digite sua senha</string>
    <string name="hint_repeat_password">Digite novamente sua senha</string>
    <string name="hint_full_name">Digite seu nome completo</string>
    <string name="hint_company_code">Código da Empresa</string>
    <string name="hint_task_title">Digite o Título</string>
    <string name="hint_task_description">Digite a Descrição</string>
    <string name="hint_task_delivery">Data de Entrega</string>
    <string name="hint_search_members">Pesquise por membros</string>

    <string name="label_email">E-mail</string>
    <string name="label_password">Senha</string>
    <string name="label_repeat_password">Repita sua Senha</string>
    <string name="label_full_name">Nome Completo</string>
    <string name="label_company_code">Código da Empresa</string>
    <string name="label_task_title">Título</string>
    <string name="label_task_description">Descrição</string>
    <string name="label_task_priority">Prioridade</string>
    <string name="label_task_delivery">Data de Entrega</string>

    <string name="btn_login">ENTRAR</string>
    <string name="btn_register">CADASTRAR</string>
    <string name="btn_continue">CONTINUAR</string>
    <string name="btn_save">SALVAR</string>

    <string name="text_register">Ainda não possui uma conta?</string>
    <string name="text_register_link">Crie uma agora!</string>
    <string name="text_register_user_warning">Caso você trabalhe para alguma empresa que já utiliza nosso aplicativo é necessário pedir para o seu administrador o código de acesso para que possa ser informado no campo abaixo. \nPara uma nova empresa, deixe esse campo em branco.</string>
    <string name="text_required_field">Campo obrigatório!</string>
    <string name="text_passwords_equals">As senhas devem ser iguais!</string>
    <string name="text_invalid_user">Email ou senha incorretos!</string>

    <string name="title_attention">Atenção!</string>

    <string name="placeholder_go_back">Voltar</string>

    <string name="openDrawer">Abrir Menu</string>
    <string name="closeDrawer">Fechar Menu</string>
    <string name="title_added_members">Adicionar membros</string>
</resources>
