<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUserActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerViewHeader"
        android:name="com.example.taskflow.HeaderFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewFullNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_full_name"
        app:layout_constraintBottom_toTopOf="@+id/editTextFullNameInput"
        app:layout_constraintStart_toStartOf="@+id/editTextFullNameInput" />

    <EditText
        android:id="@+id/editTextFullNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:ems="15"
        android:hint="@string/hint_full_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_email"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailInput"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailInput" />

    <EditText
        android:id="@+id/editTextEmailInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="15"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/editTextFullNameInput"
        app:layout_constraintStart_toStartOf="@id/editTextFullNameInput"
        app:layout_constraintTop_toBottomOf="@+id/editTextFullNameInput" />

    <androidx.cardview.widget.CardView
        android:id="@+id/warningCardLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="15dp"

        app:cardBackgroundColor="@color/task_flow_warning_background_blue">
            <LinearLayout
            android:id="@+id/warningCardLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            android:orientation="vertical">
                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="19"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/task_flow_warning_text_blue"
                    android:text="@string/title_attention" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="19"
                    android:paddingHorizontal="10dp"
                    android:gravity="center"
                    android:textColor="@color/task_flow_warning_text_blue"
                    android:text="@string/text_register_user_warning" />


                </LinearLayout>
    </androidx.cardview.widget.CardView>



    <TextView
        android:id="@+id/textViewCompanyCodeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_company_code"
        app:layout_constraintBottom_toTopOf="@+id/editTextCompanyCodeInput"
        app:layout_constraintStart_toStartOf="@+id/editTextCompanyCodeInput" />

    <EditText
        android:id="@+id/editTextCompanyCodeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="15"
        android:hint="@string/hint_company_code"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/warningCardLayout"
        app:layout_constraintStart_toStartOf="@id/warningCardLayout"
        app:layout_constraintTop_toBottomOf="@+id/warningCardLayout" />

    <TextView
        android:id="@+id/textViewPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_password"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswordInput"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordInput" />

    <EditText
        android:id="@+id/editTextPasswordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="15"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextCompanyCodeInput"
        app:layout_constraintStart_toStartOf="@+id/editTextCompanyCodeInput"
        app:layout_constraintTop_toBottomOf="@+id/editTextCompanyCodeInput" />

    <TextView
        android:id="@+id/textViewRepeatPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_repeat_password"
        app:layout_constraintBottom_toTopOf="@+id/editTextRepeatPasswordInput"
        app:layout_constraintStart_toStartOf="@+id/editTextRepeatPasswordInput" />

    <EditText
        android:id="@+id/editTextRepeatPasswordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="15"
        android:hint="@string/hint_repeat_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextPasswordInput"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswordInput" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/task_flow_blue"
        android:ems="19"
        android:text="@string/btn_register"
        app:layout_constraintEnd_toEndOf="@+id/editTextRepeatPasswordInput"
        app:layout_constraintStart_toStartOf="@+id/editTextRepeatPasswordInput"
        app:layout_constraintTop_toBottomOf="@+id/editTextRepeatPasswordInput" />

</androidx.constraintlayout.widget.ConstraintLayout>